@@ -1,3 +1,9 @@
+2002-06-17  Tom Rix <trix@redhat.com>
+
+	* elf32-d10v.c (elf_d10v_howto_table): Change R_D10V_10_PCREL_R,
+	R_D10V_10_PCREL_L and R_D10V_18_PCREL to use 
+	complain_overflow_bitfield.
+
 2002-06-17  Alan Modra  <amodra@bigpond.net.au>
 
 	* opncls.c (bfd_openr): Remove redundant bfd_set_error.
